# vv/testdata/api/api/dummy.swagger.json
@@ -45,6 +45,45 @@
           "DummyService"
         ]
       }
+    },
+    "/dummy/stream/echo": {
+      "get": {
+        "operationId": "DummyService_StreamEcho",
+        "responses": {
+          "200": {
+            "description": "A successful response.(streaming responses)",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "result": {
+                  "$ref": "#/definitions/dummyEchoResp"
+                },
+                "error": {
+                  "$ref": "#/definitions/rpcStatus"
+                }
+              },
+              "title": "Stream result of dummyEchoResp"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "message",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "DummyService"
+        ]
+      }
     }
   },
   "definitions": {
