# vv/testdata/api/gen/dummy.pb.go
@@ -140,16 +140,24 @@ var file_dummy_proto_rawDesc = []byte{
 	0x73, 0x73, 0x61, 0x67, 0x65, 0x22, 0x36, 0x0a, 0x08, 0x45, 0x63, 0x68, 0x6f, 0x52, 0x65, 0x73,
 	0x70, 0x12, 0x18, 0x0a, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x18, 0x01, 0x20, 0x01,
 	0x28, 0x09, 0x52, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x12, 0x10, 0x0a, 0x03, 0x61,
-	0x63, 0x6b, 0x18, 0x02, 0x20, 0x01, 0x28, 0x08, 0x52, 0x03, 0x61, 0x63, 0x6b, 0x32, 0x77, 0x0a,
-	0x0c, 0x44, 0x75, 0x6d, 0x6d, 0x79, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x67, 0x0a,
-	0x04, 0x45, 0x63, 0x68, 0x6f, 0x12, 0x0e, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x45, 0x63,
+	0x63, 0x6b, 0x18, 0x02, 0x20, 0x01, 0x28, 0x08, 0x52, 0x03, 0x61, 0x63, 0x6b, 0x32, 0xf1, 0x01,
+	0x0a, 0x0c, 0x44, 0x75, 0x6d, 0x6d, 0x79, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x67,
+	0x0a, 0x04, 0x45, 0x63, 0x68, 0x6f, 0x12, 0x0e, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x45,
+	0x63, 0x68, 0x6f, 0x52, 0x65, 0x71, 0x1a, 0x0f, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x45,
+	0x63, 0x68, 0x6f, 0x52, 0x65, 0x73, 0x70, 0x22, 0x3e, 0xa2, 0xb0, 0x24, 0x27, 0x0a, 0x09, 0x64,
+	0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x73, 0x73, 0x6f, 0x12, 0x0a, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f,
+	0x73, 0x69, 0x67, 0x6e, 0x1a, 0x0c, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x69, 0x70, 0x6c, 0x69,
+	0x73, 0x74, 0x20, 0x01, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0d, 0x12, 0x0b, 0x2f, 0x64, 0x75, 0x6d,
+	0x6d, 0x79, 0x2f, 0x65, 0x63, 0x68, 0x6f, 0x12, 0x78, 0x0a, 0x0a, 0x53, 0x74, 0x72, 0x65, 0x61,
+	0x6d, 0x45, 0x63, 0x68, 0x6f, 0x12, 0x0e, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x45, 0x63,
 	0x68, 0x6f, 0x52, 0x65, 0x71, 0x1a, 0x0f, 0x2e, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x2e, 0x45, 0x63,
-	0x68, 0x6f, 0x52, 0x65, 0x73, 0x70, 0x22, 0x3e, 0xa2, 0xb0, 0x24, 0x27, 0x0a, 0x09, 0x64, 0x75,
+	0x68, 0x6f, 0x52, 0x65, 0x73, 0x70, 0x22, 0x45, 0xa2, 0xb0, 0x24, 0x27, 0x0a, 0x09, 0x64, 0x75,
 	0x6d, 0x6d, 0x79, 0x5f, 0x73, 0x73, 0x6f, 0x12, 0x0a, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x73,
 	0x69, 0x67, 0x6e, 0x1a, 0x0c, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x5f, 0x69, 0x70, 0x6c, 0x69, 0x73,
-	0x74, 0x20, 0x01, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0d, 0x12, 0x0b, 0x2f, 0x64, 0x75, 0x6d, 0x6d,
-	0x79, 0x2f, 0x65, 0x63, 0x68, 0x6f, 0x42, 0x0a, 0x5a, 0x08, 0x2e, 0x2f, 0x3b, 0x64, 0x75, 0x6d,
-	0x6d, 0x79, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x74, 0x20, 0x01, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x14, 0x12, 0x12, 0x2f, 0x64, 0x75, 0x6d, 0x6d,
+	0x79, 0x2f, 0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x2f, 0x65, 0x63, 0x68, 0x6f, 0x28, 0x01, 0x30,
+	0x01, 0x42, 0x0a, 0x5a, 0x08, 0x2e, 0x2f, 0x3b, 0x64, 0x75, 0x6d, 0x6d, 0x79, 0x62, 0x06, 0x70,
+	0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -171,9 +179,11 @@ var file_dummy_proto_goTypes = []interface{}{
 }
 var file_dummy_proto_depIdxs = []int32{
 	0, // 0: dummy.DummyService.Echo:input_type -> dummy.EchoReq
-	1, // 1: dummy.DummyService.Echo:output_type -> dummy.EchoResp
-	1, // [1:2] is the sub-list for method output_type
-	0, // [0:1] is the sub-list for method input_type
+	0, // 1: dummy.DummyService.StreamEcho:input_type -> dummy.EchoReq
+	1, // 2: dummy.DummyService.Echo:output_type -> dummy.EchoResp
+	1, // 3: dummy.DummyService.StreamEcho:output_type -> dummy.EchoResp
+	2, // [2:4] is the sub-list for method output_type
+	0, // [0:2] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
 	0, // [0:0] is the sub-list for extension extendee
 	0, // [0:0] is the sub-list for field type_name
