# vv/testdata/api/gen/dummy_grpc.pb.go
@@ -19,6 +19,7 @@ const _ = grpc.SupportPackageIsVersion7
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
 type DummyServiceClient interface {
 	Echo(ctx context.Context, in *EchoReq, opts ...grpc.CallOption) (*EchoResp, error)
+	StreamEcho(ctx context.Context, opts ...grpc.CallOption) (DummyService_StreamEchoClient, error)
 }
 
 type dummyServiceClient struct {
@@ -38,11 +39,43 @@ func (c *dummyServiceClient) Echo(ctx context.Context, in *EchoReq, opts ...grpc
 	return out, nil
 }
 
+func (c *dummyServiceClient) StreamEcho(ctx context.Context, opts ...grpc.CallOption) (DummyService_StreamEchoClient, error) {
+	stream, err := c.cc.NewStream(ctx, &DummyService_ServiceDesc.Streams[0], "/dummy.DummyService/StreamEcho", opts...)
+	if err != nil {
+		return nil, err
+	}
+	x := &dummyServiceStreamEchoClient{stream}
+	return x, nil
+}
+
+type DummyService_StreamEchoClient interface {
+	Send(*EchoReq) error
+	Recv() (*EchoResp, error)
+	grpc.ClientStream
+}
+
+type dummyServiceStreamEchoClient struct {
+	grpc.ClientStream
+}
+
+func (x *dummyServiceStreamEchoClient) Send(m *EchoReq) error {
+	return x.ClientStream.SendMsg(m)
+}
+
+func (x *dummyServiceStreamEchoClient) Recv() (*EchoResp, error) {
+	m := new(EchoResp)
+	if err := x.ClientStream.RecvMsg(m); err != nil {
+		return nil, err
+	}
+	return m, nil
+}
+
 // DummyServiceServer is the server API for DummyService service.
 // All implementations must embed UnimplementedDummyServiceServer
 // for forward compatibility
 type DummyServiceServer interface {
 	Echo(context.Context, *EchoReq) (*EchoResp, error)
+	StreamEcho(DummyService_StreamEchoServer) error
 	mustEmbedUnimplementedDummyServiceServer()
 }
 
@@ -52,6 +85,9 @@ type UnimplementedDummyServiceServer struct {
 
 func (UnimplementedDummyServiceServer) Echo(context.Context, *EchoReq) (*EchoResp, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Echo not implemented")
+}
+func (UnimplementedDummyServiceServer) StreamEcho(DummyService_StreamEchoServer) error {
+	return status.Errorf(codes.Unimplemented, "method StreamEcho not implemented")
 }
 func (UnimplementedDummyServiceServer) mustEmbedUnimplementedDummyServiceServer() {}
 
@@ -84,6 +120,32 @@ func _DummyService_Echo_Handler(srv interface{}, ctx context.Context, dec func(i
 	return interceptor(ctx, in, info, handler)
 }
 
+func _DummyService_StreamEcho_Handler(srv interface{}, stream grpc.ServerStream) error {
+	return srv.(DummyServiceServer).StreamEcho(&dummyServiceStreamEchoServer{stream})
+}
+
+type DummyService_StreamEchoServer interface {
+	Send(*EchoResp) error
+	Recv() (*EchoReq, error)
+	grpc.ServerStream
+}
+
+type dummyServiceStreamEchoServer struct {
+	grpc.ServerStream
+}
+
+func (x *dummyServiceStreamEchoServer) Send(m *EchoResp) error {
+	return x.ServerStream.SendMsg(m)
+}
+
+func (x *dummyServiceStreamEchoServer) Recv() (*EchoReq, error) {
+	m := new(EchoReq)
+	if err := x.ServerStream.RecvMsg(m); err != nil {
+		return nil, err
+	}
+	return m, nil
+}
+
 // DummyService_ServiceDesc is the grpc.ServiceDesc for DummyService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -96,6 +158,13 @@ var DummyService_ServiceDesc = grpc.ServiceDesc{
 			Handler:    _DummyService_Echo_Handler,
 		},
 	},
-	Streams:  []grpc.StreamDesc{},
+	Streams: []grpc.StreamDesc{
+		{
+			StreamName:    "StreamEcho",
+			Handler:       _DummyService_StreamEcho_Handler,
+			ServerStreams: true,
+			ClientStreams: true,
+		},
+	},
 	Metadata: "dummy.proto",
 }
