# vv/testdata/server/impl.go
@@ -3,6 +3,7 @@ package main
 import (
 	"context"
 	"fmt"
+	"io"
 	"net/http"
 
 	"github.com/bluekaki/pkg/errors"
@@ -47,4 +48,26 @@ func (d *dummyService) Echo(ctx context.Context, req *dummy.EchoReq) (*dummy.Ech
 		Message: fmt.Sprintf("Hello %s[%s], %s.", userinfo.Name, identifier, req.Message),
 		Ack:     true,
 	}, nil
+}
+
+func (d *dummyService) StreamEcho(stream dummy.DummyService_StreamEchoServer) error {
+	for {
+		req, err := stream.Recv()
+		if err != nil {
+			if err != io.EOF {
+				return cuzerr.NewBzError(alertCode, errors.Wrap(err, "stream recv err")).AlertError(nil)
+			}
+			break
+		}
+
+		err = stream.Send(&dummy.EchoResp{
+			Message: fmt.Sprintf("Hello %s.", req.Message),
+			Ack:     true,
+		})
+		if err != nil {
+			return cuzerr.NewBzError(alertCode, errors.Wrap(err, "stream send err")).AlertError(nil)
+		}
+	}
+
+	return nil
 }
